<resources>
    <string name="app_name" translatable="false">Calculator_</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_guide">Tips</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_namespace">Edit Namespaces</string>
    <string name="title_activity_keyboards">Edit Keyboard Kits</string>
    <string name="action_history">History</string>
    <string name="action_guide">Tips</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_saveChanges" translatable="false">@string/saveChanges</string>
    <string name="action_advancedSettings">Advanced settings</string>
    <string name="action_restoreKitDefaults" translatable="false">@string/dialog_restoreKitDefaults_title</string>
    <string name="action_guide_left">Back</string>
    <string name="action_guide_right">Forward</string>
    <string name="error">Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="later">Later</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saveChanges">Save changes</string>
    <string name="changesSaved">Changes saved</string>
    <string name="NaN">Not a number</string>
    <string name="rad" translatable="false">RAD</string>
    <string name="deg" translatable="false">DEG</string>
    <string name="message_emptyPage">There are no buttons added to this page.</string>
    <string name="menuItem_cut">Cut all</string>
    <string name="menuItem_copy">Copy all</string>
    <string name="menuItem_paste">Paste</string>
    <string name="menuItem_asFraction">As fraction</string>
    <string name="menuItem_history_copyExpr">Copy expression</string>
    <string name="menuItem_history_copyResult">Copy result</string>
    <string name="menuItem_history_copyAll">Copy all</string>
    <string name="menuItem_history_pasteExpr">Paste expression into input field</string>
    <string name="menuItem_history_pasteResult">Paste result into input field</string>
    <string name="dialog_fatalError_title">Fatal Error!</string>
    <string name="dialog_fatalError_button">Close app</string>
    <string name="message_bad_kits_xml">Cannot parse .xml file containing information about keyboard kits. Try removing application data in system settings. \n\nError: %s</string>
    <string name="dialog_firstLaunch_title">First Launch</string>
    <string name="dialog_firstLaunch_message">\t\tThere are many useful features in this app, which are
        initially \"invisible\". That\'s why we\'ve created a special window — \"Tips\".
        \n\t\tYou can open the tips right now or firstly have a look at the app
        and read them later.
        \n\t\t\"Tips\" can be open by clicking at three dots in the upper right corner.</string>
    <string name="dialog_firstLaunch_positive">Open tips</string>
    <string name="dialog_firstLaunch_negative">Later</string>
    <string name="dialog_kitsUpdated_title">Keyboard kits were updated</string>
    <string name="dialog_kitsUpdated_message">The kit was unpacked moments ago</string>
    <string name="dialog_kitsUpdated_message_lookAtDefault">You should take a look at the default kit as
        there may be new cool features</string>
    <string name="dialog_kitsCannotBeSaved">Sorry, but new keyboards kits cannot be saved by unknown
        reason. Here are some details. Please, send screenshot of this window to RootTemplate.
        We would be grateful if you could do this.</string>
    <string name="dialog_update_title">Check for Updates</string>
    <string name="dialog_update_message">Would you like to check for updates?</string>
    <string name="dialog_update_positive" translatable="false">@string/yes</string>
    <string name="dialog_update_neutral" translatable="false">@string/later</string>
    <string name="dialog_update_negative" translatable="false">@string/no</string>
    <string name="dialog_asFraction_title" translatable="false">@string/menuItem_asFraction</string>
    <string name="dialog_asFraction_message_error">This fraction is approximately equal to result number and differs from it by %1$s%%.</string>
    <string name="dialog_asFraction_toFraction">To fraction</string>
    <string name="dialog_asFraction_findAccurateValue">Find more accurate fraction</string>
    <string name="dialog_asFraction_currentMaxQ">Denominator &lt; %1$s.</string>
    <string name="dialog_save_title">Save changes?</string>
    <string name="dialog_save_positive" translatable="false">@string/save</string>
    <string name="dialog_save_negative">Don\'t save</string>
    <string name="dialog_save_neutral" translatable="false">@string/cancel</string>
    <string name="dialog_restoreKitDefaults_title">Restore default kits</string>
    <string name="dialog_restoreKitDefaults_message">Are you sure that you want to restore default keyboard kits?
        You will lose all your changes.</string>
    <string name="dialog_restoreKitDefaults_result">Default kits restored</string>
    <string name="yotta">Y</string>
    <string name="zetta">Z</string>
    <string name="exa">E</string>
    <string name="peta">P</string>
    <string name="tera">T</string>
    <string name="giga">G</string>
    <string name="mega">M</string>
    <string name="kilo">k</string>
    <string name="milli">m</string>
    <string name="micro">μ</string>
    <string name="nano">n</string>
    <string name="pico">p</string>
    <string name="femto">f</string>
    <string name="atto">a</string>
    <string name="zepto">z</string>
    <string name="yocto">y</string>
    <string name="about_arote" translatable="false">RootTemplate</string>
    <string name="about_checkForUpdates">Check for Updates</string>
    <string name="about_calculator" translatable="false">Calculator_</string>
    <string name="about_copyright" translatable="false">Copyright © RootTemplate Group 1, 2016—2017</string>
    <string name="about_info">&lt;b&gt;Authors&lt;/b&gt;: RootTemplate Group 1&lt;br&gt;
        &lt;b&gt;License&lt;/b&gt;: &lt;a href=\"https://github.com/RootTemplate/Calculator_/blob/master/Calculator/COPYING\"&gt;GNU GPL v3&lt;/a&gt;&lt;br&gt;
        &lt;b&gt;Source Code&lt;/b&gt;: &lt;a href=\"https://github.com/RootTemplate/Calculator_\"&gt;on GitHub&lt;/a&gt;</string>
    <string name="namespace_clear">Clear namespace</string>
    <string name="namespace_common_ns">Common (used when namespaces are not separated)</string>
    <string name="namespace_summary">If you use \'Retain namespace entries\', but you do not want
        one item to be auto-deleted, tick the checkbox in the right and it will not be removed.</string>
    <string-array name="keyboards_categories">
        <item>System</item>
        <item>Digits</item>
        <item>Operators</item>
        <item>Functions</item>
        <item>Letters</item>
        <item>Miscellaneous</item>
        <item>Custom</item>
    </string-array>
    <string-array name="keyboards_editButton_styles">
        <item>Light style</item>
        <item>Light style, behaviour of a digit</item>
        <item>Dark style</item>
    </string-array>
    <string-array name="keyboards_editPage_orient">
        <item>Vertical orientation of lines</item>
        <item>Horizontal orientation of lines</item>
    </string-array>
    <string-array name="keyboards_editPage_returnToMain">
        <item>Do not return to home page</item>
        <item>Return to home after double click</item>
        <item>Return to home after single click</item>
    </string-array>
    <string name="keyboards_editButton_name">Name</string>
    <string name="keyboards_editButton_enableTextField">Override the text added when button is clicked</string>
    <string name="keyboards_editButton_enableCaseInverse">Inverse the case when shift is pressed</string>
    <string name="keyboards_editButton_overridePageReturn">Override return type to home page</string>
    <string name="keyboards_editButton_pageReturnWarn">When this button is clicked, the return to home page will occur
            as specified, regardless of what type is chosen in page settings.</string>
    <string name="keyboards_editKit_name">Full name</string>
    <string name="keyboards_editKit_actionBarAccess">Show the kit on main screen</string>
    <string name="keyboards_editKit_shortName">Short name</string>
    <string name="keyboards_editKit_overrideOutputType">Override \"Way to express numbers in result\" in this kit</string>
    <string name="keyboards_editKit_outputTypeWarning">When this kit is selected, the option will use the value above, rather than the one specified in the settings.</string>
    <string name="keyboards_editPage_setMain">Set this page as home</string>
    <string name="keyboards_editPage_addPageLeft">New page at left</string>
    <string name="keyboards_editPage_addPageRight">New page at right</string>
    <string name="pref_def_brClosingType" translatable="false">2</string>
    <string name="pref_def_amu" translatable="false">1</string>
    <string name="pref_def_storingHistory" translatable="false">50</string>
    <string name="pref_def_digitGrouping_separator_left" translatable="false">1</string>
    <string name="pref_def_digitGrouping_separator_fract" translatable="false">0</string>
    <string name="pref_def_storingNamespace" translatable="false">-1</string>
    <string name="pref_def_dayNightTheme" translatable="false">0</string>
    <string name="pref_category_calcRes">Calculation &amp; Result</string>
    <string name="pref_category_output">Output</string>
    <string name="pref_category_history">History</string>
    <string name="pref_category_tips">Tips</string>
    <string name="pref_category_namespace">Namespace</string>
    <string name="pref_category_theme">Theme</string>
    <string name="pref_doRound_title">Rounding</string>
    <string name="pref_doRound_summary">Round result number to fit the screen</string>
    <string name="pref_digitGrouping_title">Digit grouping</string>
    <string name="pref_digitGrouping_separator_left_title">Separator of left part</string>
    <string name="pref_digitGrouping_separator_fract_title">Separator of fractional part</string>
    <string name="pref_amu_title">Measurement units of angle</string>
    <string name="pref_enabledHistory_title">History</string>
    <string name="pref_enabledHistory_summary">Remember calculations</string>
    <string name="pref_storingHistory_title">Retain history</string>
    <string name="pref_brClosingType_title">Close unclosed brackets</string>
    <string name="pref_separateNamespace_title">Separate namespaces</string>
    <string name="pref_separateNamespace_summary">If turned on, variable/function, typed in one kit, will be not
            available in another kit.</string>
    <string name="pref_clearHistory_title">Clear history</string>
    <string name="pref_clearAllNamespaces_title">Clear all namespaces</string>
    <string name="pref_clearAllNamespaces_summary">Forget all typed variables and functions</string>
    <string name="pref_storingNamespace_title">Retain namespace entries</string>
    <string name="pref_enabledTips_title">Tips</string>
    <string name="pref_enabledTips_summary">Show tips in options menu</string>
    <string name="pref_editNamespace_title">Edit namespaces</string>
    <string name="pref_editNamespace_summary">View typed variables/functions</string>
    <string name="pref_dayNightTheme_title">Theme</string>
    <string name="pref_darkOrangeEquals_title">Orange \"Equals\" button</string>
    <string name="pref_darkOrangeEquals_summary">Use orange colour for \"Equals\" button in dark theme</string>
    <string name="pref_editButtonKits_title">Edit keyboard kits</string>
</resources>