<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_category_calcRes">

        <CheckBoxPreference
            android:key="doRound"
            android:defaultValue="@bool/pref_def_doRound"
            android:title="@string/pref_doRound_title"
            android:summary="@string/pref_doRound_summary"/>

        <!--<CheckBoxPreference
            android:key="autoBracketClosing"
            android:defaultValue="@bool/pref_def_autoBracketClosing"
            android:title="@string/pref_autoBracketClosing_title"
            android:summary="@string/pref_autoBracketClosing_summary" />-->

        <ListPreference
            android:key="bracketClosingType"
            android:title="@string/pref_brClosingType_title"
            android:entries="@array/pref_brClosingType_list_entries"
            android:entryValues="@array/pref_brClosingType_list_values"
            android:defaultValue="@string/pref_def_brClosingType" />

        <ListPreference
            android:key="amu"
            android:title="@string/pref_amu_title"
            android:entries="@array/pref_amu_list_entries"
            android:entryValues="@array/pref_amu_list_values"
            android:defaultValue="@string/pref_def_amu" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_output" >

        <ListPreference
            android:key="digitGrouping"
            android:title="@string/pref_digitGrouping_title"
            android:entries="@array/pref_digitGrouping_entries"
            android:entryValues="@array/pref_digitGrouping_values"
            android:defaultValue="@string/pref_def_digitGrouping" />

        <ListPreference
            android:key="digitGroupingSeparatorLeft"
            android:title="@string/pref_digitGrouping_separator_left_title"
            android:entries="@array/pref_digitGrouping_separator_entries"
            android:entryValues="@array/pref_digitGrouping_separator_values"
            android:defaultValue="@string/pref_def_digitGrouping_separator_left" />

        <ListPreference
            android:key="digitGroupingSeparatorFract"
            android:title="@string/pref_digitGrouping_separator_fract_title"
            android:entries="@array/pref_digitGrouping_separator_entries"
            android:entryValues="@array/pref_digitGrouping_separator_values"
            android:defaultValue="@string/pref_def_digitGrouping_separator_fract" />

        <!--<CheckBoxPreference
            android:key="highlightE"
            android:defaultValue="@bool/pref_def_highlightE"
            android:title="@string/pref_highlightE_title"
            android:summary="@string/pref_highlightE_summary" />-->

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_history">

        <CheckBoxPreference
            android:key="enabledHistory"
            android:defaultValue="@bool/pref_def_enabledHistory"
            android:title="@string/pref_enabledHistory_title"
            android:summary="@string/pref_enabledHistory_summary"/>

        <ListPreference
            android:key="storingHistory"
            android:dependency="enabledHistory"
            android:title="@string/pref_storingHistory_title"
            android:entries="@array/pref_storingHistory_list_entries"
            android:entryValues="@array/pref_storingHistory_list_values"
            android:defaultValue="@string/pref_def_storingHistory" />

        <Preference
            android:key="clearHistory"
            android:title="@string/pref_clearHistory_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_tips">

        <CheckBoxPreference
            android:key="enabledTips"
            android:defaultValue="@bool/pref_def_enabledTips"
            android:title="@string/pref_enabledTips_title"
            android:summary="@string/pref_enabledTips_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_namespace">

        <CheckBoxPreference
            android:key="separateNamespace"
            android:title="@string/pref_separateNamespace_title"
            android:summary="@string/pref_separateNamespace_summary"
            android:defaultValue="@bool/pref_def_separateNamespace" />

        <ListPreference
            android:key="storingNamespace"
            android:title="@string/pref_storingNamespace_title"
            android:entries="@array/pref_storingNamespace_list_entries"
            android:entryValues="@array/pref_storingNamespace_list_values"
            android:defaultValue="@string/pref_def_storingNamespace" />

        <Preference
            android:key="clearAllNamespaces"
            android:title="@string/pref_clearAllNamespaces_title"
            android:summary="@string/pref_clearAllNamespaces_summary" />

        <Preference
            android:key="editNamespace"
            android:title="@string/pref_editNamespace_title"
            android:summary="@string/pref_editNamespace_summary"
            android:persistent="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_theme">

        <!--<Preference
            android:title="@string/pref_editColors_title" />-->

        <ListPreference
            android:key="dayNightTheme"
            android:title="@string/pref_dayNightTheme_title"
            android:entries="@array/pref_dayNightTheme_entries"
            android:entryValues="@array/pref_dayNightTheme_values"
            android:defaultValue="@string/pref_def_dayNightTheme" />

        <CheckBoxPreference
            android:key="darkOrangeEquals"
            android:title="@string/pref_darkOrangeEquals_title"
            android:summary="@string/pref_darkOrangeEquals_summary"
            android:defaultValue="@bool/pref_def_darkOrangeEquals" />

        <Preference
            android:title="@string/pref_editButtonKits_title" />

    </PreferenceCategory>

</PreferenceScreen>
