<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 RootTemplate Group 1.
  ~ This file is part of Calculator_.
  ~
  ~ Calculator_ is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Calculator_ is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Calculator_.  If not, see <http://www.gnu.org/licenses/>.
  -->


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dialog_horizontal_margin"
        android:paddingRight="@dimen/dialog_horizontal_margin">

        <EditText
            android:id="@+id/editKit_fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/keyboards_editKit_name"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="@integer/keyboards_maxNameLength" />

        <CheckBox
            android:id="@+id/editKit_actionBarAccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editKit_fullName"
            android:layout_marginTop="2dp"
            android:checked="true"
            android:text="@string/keyboards_editKit_actionBarAccess" />

        <EditText
            android:id="@+id/editKit_shortName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editKit_actionBarAccess"
            android:layout_marginLeft="@dimen/keyboards_layout_padding"
            android:layout_marginStart="@dimen/keyboards_layout_padding"
            android:layout_marginTop="2dp"
            android:ems="10"
            android:hint="@string/keyboards_editKit_shortName"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="@integer/keyboards_maxNameLength"/>

        <CheckBox
            android:id="@+id/editKit_overrideOutputType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editKit_shortName"
            android:layout_marginTop="2dp"
            android:checked="false"
            android:text="@string/keyboards_editKit_overrideOutputType" />

        <Spinner
            android:id="@+id/editKit_outputType"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editKit_overrideOutputType"
            android:layout_marginLeft="@dimen/keyboards_layout_padding"
            android:layout_marginStart="@dimen/keyboards_layout_padding"
            android:layout_marginTop="2dp"
            android:entries="@array/pref_outputType_entries"
            android:visibility="gone" />

        <TextView
            android:id="@+id/editKit_outputTypeWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editKit_outputType"
            android:layout_alignStart="@+id/editKit_outputType"
            android:layout_below="@+id/editKit_outputType"
            android:layout_marginTop="2dp"
            android:text="@string/keyboards_editKit_outputTypeWarning"
            android:visibility="gone" />

        <TextView
            android:id="@+id/editKit_contentCopied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editKit_outputTypeWarning"
            android:layout_marginTop="8dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/editKit_errorOfExistence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editKit_contentCopied"
            android:layout_marginTop="8dp"
            android:textColor="#ffcc0000"
            android:visibility="gone" /> <!-- textColor = @android:color/holo_red_dark -->

    </RelativeLayout>
</ScrollView>